test/analyze/type_check/variable_declaration/wildcard.exp
Error: Expected type `Bool` but found `Int`
test/analyze/type_check/variable_declaration/wildcard.myte:6:16
 6 |   val _: Bool = 1;
   |                 ^

Error: Expected type `Unit` but found `(Int, (Bool, String))`
test/analyze/type_check/variable_declaration/wildcard.myte:17:3-9
 17 |   ((x, y): Unit);
    |    ^^^^^^