test/analyze/type_check/variable_declaration/wildcard.myte
module test

fun main() {
  val _: Int = 1;
  // Errors
  val _: Bool = 1;

  val _ = 1;
  val _ = true;
  val (_, _) = (1, true);
  val (_, _) = (1, (true, ""));

  // Mixed ids and wildcards
  val (x, _) = (1, (true, ""));
  val (_, y) = (1, (true, ""));
  // Print types
  ((x, y): Unit);
}